Bug 99808 - Scrollwheel doesn't work on position slider
Summary: Scrollwheel doesn't work on position slider
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: general (other bugs)
Version First Reported In: 1.2
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Amarok Bugs
URL:
Keywords:
: 99078 (view as bug list)
Depends on:
Blocks:
 
Reported: 2005-02-19 19:26 UTC by ieure
Modified: 2006-12-17 10:02 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
xine-engine.cpp.patch (654 bytes, patch)
2006-12-15 22:07 UTC, Alex
Details

Note You need to log in before you can comment on or make changes to this bug.
Description ieure 2005-02-19 19:26:48 UTC
Version:           1.2 (using KDE 3.3.2,  (3.1))
Compiler:          gcc version 3.3.5 (Debian 1:3.3.5-8)
OS:                Linux (i686) release 2.6.10-1-686

The position slider doesn't work as expected when using my scrollwheel.

When I scroll (either up or down) a few times, the song restarts. It should seek forward and backwards in the song.
Comment 1 Mark Kretschmann 2005-02-27 09:58:50 UTC
Yep, I can confirm this.
Comment 2 Max Howell 2005-02-28 14:00:29 UTC
This is because during a seek the engine (may) return 0 for position. So If you scroll at that time it will seek from position 0.

This is a duplicate report.
Comment 3 Mark Kretschmann 2005-03-01 11:26:20 UTC
*** Bug 99078 has been marked as a duplicate of this bug. ***
Comment 4 Mark Kretschmann 2005-03-01 11:26:42 UTC
*** Bug 99078 has been marked as a duplicate of this bug. ***
Comment 5 Nick Matteo 2005-04-01 08:39:12 UTC
On 1.2.3 here, using the scrollwheel on the song position slider results in skipping and garbled sound and no song movement, using both aKode and Gstreamer engines. I tried to test the arts engine but it wouldn't start playing at all.

Looking at 99078, I don't have the same kind of behavior at all.  Shift+scroll over the systray icon works perfectly; it's only the position slider that's broken; and it doesn't involve large numbers of scrolls.
Comment 6 Reigo Reinmets 2005-07-30 01:23:44 UTC
SVN commit 440138 by xatax:

Fix the ancient Scrollwheel doesn't work on position slider bug.
BUG: 99808

 M  +3 -0      sliderwidget.cpp  


--- trunk/extragear/multimedia/amarok/src/sliderwidget.cpp #440137:440138
@@ -37,7 +37,10 @@
 amaroK::Slider::wheelEvent( QWheelEvent *e )
 {
     uint step = e->delta() / 18;
+    // Volume Slider
     if( orientation() == Vertical ) step = -step;
+    // Position Slider
+    else step = step * 1500;
     QSlider::setValue( QSlider::value() + step );
 
     emit sliderReleased( value() );
Comment 7 Alex 2006-12-15 22:07:59 UTC
Created attachment 18945 [details]
xine-engine.cpp.patch

1.4.4 bug still here, but now it appears at global seek hotkey. I think this
patch(hack?) can remove him from everywhere.
Comment 8 Mark Kretschmann 2006-12-17 10:02:56 UTC
Alex, I've committed your patch. It works great! Many thanks :)