Improved seeking with xine-engine. No longer jumps to 0 when you seek too quickly. Patch by Alexander Bechikov <goo@t72.ru>.

Many thanks, Alex! This works really well :)
BUG: 99808

svn path=/trunk/extragear/multimedia/amarok/; revision=614299